fix spacing issues and add new styling for mobile view

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,4 +1,4 @@
-$font-stack: Helvetica, sans-serif;
+$font-stack: 'Heiti SC', sans-serif;
 $primary-font-color: #535353;
 // @import url('https://fonts.googleapis.com/css?family=Quicksand');
 
@@ -10,9 +10,15 @@ body {
   display: grid;
   font: 100% $font-stack;
   color: $primary-font-color;
-  background-color: maroon;
+  background-color: grey;
   margin: 0 auto;
   max-width: 1024px;
+  border-left: solid 7px #535353;
+  border-right: solid 7px #535353;
+}
+
+.mobile-img {
+  display: none;
 }
 
 .banner {
@@ -68,7 +74,9 @@ $menuBorder: #535353;
   display: grid;
   grid-template-columns: 1.5fr 1.5fr 3fr 1.5fr 1.5fr;
   justify-content: center;
-  box-shadow:0px 0px 0px 5px $menuBorder inset;
+  border-top: 6px solid $menuBorder;
+  border-bottom: 6px solid $menuBorder;
+  // box-shadow:0px 0px 0px 5px $menuBorder inset;
   // border: 5px solid $menuBorder;
   background-color: $menuColor;
   color: white;
@@ -98,12 +106,12 @@ $menuBorder: #535353;
 
 .content {
   display: grid;
-  grid-template-columns: 1fr 5fr 6fr 1fr;
+  grid-template-columns: 1fr 3.5fr 7fr .5fr;
   // padding: 20px 80px;
-  background-color: pink;
+  background-color: #F5ABAA;
   width: 100vw;
   max-width: 1024px;
-  padding-top: 50px
+  padding-top: 20px
 }
 
 .right-body{
@@ -169,7 +177,7 @@ $menuBorder: #535353;
   background-color: $menuBorder;
   border-radius: 20px;
   // margin-top: 10px;
-  height: 100px;
+  height: 80px;
 }
 
 .bullets {
@@ -204,7 +212,7 @@ $menuBorder: #535353;
   display: grid;
   grid-template-columns: 15px 250px;
   grid-gap: 8px;
-  margin-top: 50px;
+  margin-top: 20px;
   margin-bottom: 150px;
 }
 
@@ -212,7 +220,7 @@ $menuBorder: #535353;
   margin: 0;
   font-size: 20px;
   p {
-    margin-top: 0;
+    margin-top: 3px;
     // margin-bottom: 18px;
   }
   p:last-child {
@@ -235,22 +243,32 @@ $menuBorder: #535353;
 
 }
 
-@media screen and (max-width: 739px) {
+@media screen and (max-width: 800px) {
   body {
-    background-color: pink;
+    background-color: #F5ABAA;
+    border: 0;
   }
 
   .bullet-container {
     display: none;
   }
 
-
   .heart {
     margin-top: -30px;
+    grid-template-columns: 9.891px 500px;
+  }
+
+  .quote-bar-two {
+    height: 45px;
+  }
+
+  #description {
+    margin-top: 5px;
+    padding-left: 10px;
   }
 
   .right-body {
-    margin-top: 100px;
+    margin-top: 20px;
     margin-right: 30px;
   }
 
@@ -258,6 +276,7 @@ $menuBorder: #535353;
   .content {
     display:flex;
     margin-top:150px;
+    padding-top: 50px;
   }
 
 
@@ -297,11 +316,40 @@ $menuBorder: #535353;
     display: flex;
     justify-content: center;
   }
+
+  // .right-body {
+  //   margin-top: -40px;;
+  //   margin-right: 30px;
+  // }
+  // .heart {
+  //   display: none;
+  // }
 }
 
-@media screen and (max-width: 445px) {
+@media screen and (max-width: 500px) {
   body {
-    background-color: pink;
+    background-color: #F5ABAA;
+    border: 0;
+  }
+
+  .heart {
+    display: none;
+  }
+
+  .header-img,
+  .logo-img {
+    display: none;
+  }
+
+  .banner {
+    display: flex;
+  }
+
+  .mobile-img {
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5em;
+    margin-bottom: 1em;
   }
 
 
@@ -317,23 +365,66 @@ $menuBorder: #535353;
     margin-top: -30px;
   }
 
-  .right-body {
-    margin-top: 100px;
-  }
-
   .quotes {
     grid-template-columns: 1.5% 94.5%;
   }
 
-  .contact-buttons {
-    flex-direction: column;
-  }
+
 
   .right-body {
+    margin-top: -40px;;
     margin-right: 30px;
   }
 
   .footer-image {
     width: 80vw;
+  }
+
+  .bullets {
+    display: none;
+  }
+
+  .contact-buttons {
+    flex-direction: column-reverse;
+    width: 100vw;
+    padding: 30px 0;
+    background-size: cover;
+    background-position: center;
+    background-image: url("../assets/images/blue-room.png");
+    .signup {
+      width: 75vw;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 20px;
+      // margin: 10px;
+    }
+  }
+
+  #description {
+    display: none;
+  }
+
+  .quotes {
+    background-size: cover;
+    background-position: center;
+    background-image: url("../assets/images/sun-room.png");
+    grid-template-columns: 100%;
+    margin-top: 18px;
+    padding-top: 20px;
+    p {
+      margin: 0 10vw;
+      margin-bottom: 20px;
+      font-size: 20px;
+      padding: 5px;
+      border: 5px solid #FFE6CE;
+      color: #FFE6CE;
+      background-color:rgba(0,0,0,0.4);
+      background: transparent\9;
+    }
+  }
+
+  .quote-bar-three,
+  .quote-bar {
+    display: none;
   }
 }
